DGC-398: fix nav vertical alignment. (#763)

--- a/docroot/themes/custom/twentynineteen/sass/components/navigation/_user-menu.scss
+++ b/docroot/themes/custom/twentynineteen/sass/components/navigation/_user-menu.scss
@@ -9,7 +9,7 @@
   @include breakpoint($small-max) {
     position: absolute;
     display: block;
-    top: 0;
+    top: 10px;
     right: 0.625em;
     z-index: 15;
   }
